added default gc settings, added localconf and service specific conf